исправляет замечания